# edge_nab

./: .gitignore  CMakeLists.txt  run_all.sh
pyscripts/: scores_plotter.py
src/: benchmark.h  csv_writer.cpp  csv_writer.h  event_encoder.cpp  event_encoder.h  grid_search.cpp  grid_search.h  main.cpp  metrics.cpp  metrics.h  nab_loader.cpp  nab_loader.h  temporal_operator.cpp  temporal_operator.h
